# obs-airplay-receiver

./: .gitignore  CMakeLists.txt  README.md  build-standalone.bat  build.bat  build.sh  installer.iss
.github/workflows/: build.yml
src/: airplay-source.c  airplay-source.h  audio-decoder.c  log.h  plugin-main.c  video-decoder.c  video-decoder.h
src/airplay/: airplay-mirror.c  airplay-mirror.h  airplay-plist.c  airplay-plist.h  airplay-ports.c  airplay-ports.h  airplay-server.c  airplay-server.h  bplist.c  bplist.h  fairplay.c  fairplay.h
src/network/: http-server.c  http-server.h  mdns-publish.c  mdns-publish.h  net-utils.c  net-utils.h
standalone/: CMakeLists.txt  airplay-stream.c  airplay-stream.h  main.c  ts-output.c  ts-output.h  webrtc-output.c  webrtc-output.h
standalone/mediasoup-server/: .gitignore  package-lock.json  package.json  server.js
standalone/mediasoup-server/public/: index.html
